[gd_scene load_steps=8 format=3 uid="uid://831xnm84ycoi"]

[ext_resource type="Script" uid="uid://ddbr8j0fm3lhu" path="res://scenes/game_main_scene.gd" id="1_cqh8l"]
[ext_resource type="Script" uid="uid://b5su4eug3qic6" path="res://scripts/audio_manager.gd" id="2_jjcd7"]
[ext_resource type="Texture2D" uid="uid://c5a8j1judxedc" path="res://assets/images/stage_level.png" id="3_o4ak3"]
[ext_resource type="Texture2D" uid="uid://cljvhkvh3co5w" path="res://assets/images/num_1.png" id="4_b03q8"]

[sub_resource type="Animation" id="Animation_6mcyx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 224)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HBoxContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_b03q8"]
resource_name = "stage_curtain_slide_up"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -224)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 1.46667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 224), Vector2(0, 448)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HBoxContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i6jat"]
_data = {
&"RESET": SubResource("Animation_6mcyx"),
&"stage_curtain_slide_up": SubResource("Animation_b03q8")
}

[node name="GameMainScene" type="Node2D"]
script = ExtResource("1_cqh8l")

[node name="AudioManager" type="Node" parent="."]
script = ExtResource("2_jjcd7")
metadata/_custom_type_script = "uid://b5su4eug3qic6"

[node name="WarRootMap" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TankLayer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 542.0
offset_top = 162.0
offset_right = 958.0
offset_bottom = 578.0

[node name="GrassMap" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StageCurtain" type="Control" parent="."]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 446.0
offset_top = 178.0
offset_right = 958.0
offset_bottom = 626.0

[node name="ColorRect" type="ColorRect" parent="StageCurtain"]
layout_mode = 0
offset_right = 512.0
offset_bottom = 224.0
color = Color(0.498039, 0.498039, 0.498039, 1)

[node name="ColorRect2" type="ColorRect" parent="StageCurtain"]
layout_mode = 0
offset_top = 224.0
offset_right = 512.0
offset_bottom = 448.0
color = Color(0.498039, 0.498039, 0.498039, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="StageCurtain"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="Sprite2D" type="Sprite2D" parent="StageCurtain/HBoxContainer"]
texture = ExtResource("3_o4ak3")

[node name="Sprite2D2" type="Sprite2D" parent="StageCurtain/HBoxContainer"]
texture = ExtResource("4_b03q8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="StageCurtain"]
libraries = {
&"": SubResource("AnimationLibrary_i6jat")
}
movie_quit_on_finish = true
